<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:layout_editor_absoluteY="81dp">


    <EditText
        android:id="@+id/Name"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="65dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="65dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="280dp"
        android:layout_height="50dp"

        android:layout_marginStart="65dp"
        android:layout_marginEnd="66dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />


    <Button
        android:id="@+id/Next"
        android:layout_width="235dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginStart="88dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/contin"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword" />


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="280dp"
        android:layout_height="248dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/translator_background" />

</android.support.constraint.ConstraintLayout>