<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Translator.LoginTranslator"
    tools:layout_editor_absoluteY="81dp">


    <EditText
        android:id="@+id/Email"
        android:layout_width="280dp"
        android:layout_height="54dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="64dp"
        android:autofillHints=""
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Email"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="64dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <Button

        android:id="@+id/login_button"
        android:layout_width="235dp"
        android:layout_height="46dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="88dp"
        android:background="@drawable/signin_btn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/SignUp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="65dp"
        android:text="@string/requestAccess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/ForgetPass"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="33dp"
        android:text="@string/forgetPass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp"
        app:layout_constraintVertical_bias="0.9"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="332dp"
        android:layout_height="221dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signin" />

</android.support.constraint.ConstraintLayout>
